Stopped some jumpiness on mobile navbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -297,7 +297,7 @@ header {
     }
 
     .navbar-collapse {
-        padding: 10px;
+        padding: 0 10px;
     }
 
     .nav-link {
